--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
@@ -36,11 +39,23 @@
         </button>
       </div>
       <div class="modal-body">
+        <form id= "taskForm" >
+          <div class="form-group">
+            <label for="taskTitle">taskTitle</label>
+            <input type = "text" id="taskTitle" name="taskTitle" class="form-control" placeholder="task title">
+          </div>
+          <div class="form-group">
+            <label for="taskContent">taskContent</label>
+            <input type = "text" id="taskContent" name="taskContent" class="form-control" placeholder="task content">
+          </div>
+          <div class="form-group">
+            <label for="taskDate">taskDate</label>
+            <input type = "date" id="taskDate" name="taskDate" class="form-control">
+          </div>
         <!--this is where you put the inputs: task title, task description, and task due date.-->
-      </div>
-      <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         <button type="button" class="btn btn-primary">Save changes</button>
+      </form>
       </div>
     </div>
   </div>
